# BBHash

./: .clang-format  .gitignore  .travis.yml  BooPHF.h  CMakeLists.txt  CROSS_PLATFORM.md  ENDIANNESS.md  README.md  bitvector.hpp  build_windows.bat  endian_utils.hpp  example  example.cpp  example_custom_hash.cpp  format.py  main.cpp  makefile  platform_time.h  progress.hpp  test_endian  test_endian.cpp  test_endian.mphf  test_min.cpp  winboo.h
.github/workflows/: benchmarks.yml  ci.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
benchmarks/: CMakeLists.txt  bench_bitvector.cpp
examples/: example.cpp  example.py  example_custom_hash.cpp  main.cpp
include/: BooPHF.h  bitvector.hpp  endian_utils.hpp  platform_time.h  progress.hpp  windows_sane.h
pybbhash/: bitvector.py  boophf.py
tests/: bootest.cpp  catch_main.cpp  test_basic.cpp  test_endian.cpp  test_min.cpp  test_multi_thread.cpp  test_serialization.cpp
